Use JDK 21 syntax